# penvault

./: .gitignore  Dockerfile  README.md  penvault.py  pyproject.toml  requirements.txt  setup.py
penvault/: app.py  cli.py  completion.py  config.py  controller.py  first_run.py  logger.py  main.py  model.py  paths.py  veracrypt.py
penvault/data/: config.ini  config_template.yml
