[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penvault"
version = "1.2.0"
description = "A tool to manage veracrypt containers as pentest vaults"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Simon Juhel", email = "null@none.com"}
]
dependencies = [
    "colorama",
    "argcomplete"
]

[tool.setuptools.package-data]
"penvault" = ["data/*"]

[project.scripts]
penvault = "penvault.main:main"
